Add Push Notification Token Management (#8)
# Add Notification Permission and Push Token Management

## Description
Implemented notification permission handling using `expo-notifications`.
The app now checks for and requests notification permissions on launch
and when the app becomes active. Additionally, implemented push
notification token handling using Supabase. Tokens are registered on
login and deleted on logout.

## Changes
### Notification Permissions
- Integrated `expo-notifications` to manage notification permissions.
- Added permission check on app launch.
- Re-checked permissions when the app becomes active using `AppState`.
- Configured `LSApplicationQueriesSchemes` for `mailto:` in `app.json`.

### Push Token Management
- Added functions for push token management in Supabase:
  - `fetchAddPushToken`: Adds or retrieves an existing push token.
  - `fetchDeletePushToken`: Deletes a push token.
  - `fetchPushTokens`: Fetches all push tokens for a user.
- Integrated token registration on login and deletion on logout in the
app's layout.

## How to Test
1. **Notification Permissions**:
   - Verify that the app requests notification permissions on launch.
      - Note that user should be signed-in.
- Move the app to the background and back to the foreground to ensure
permissions are re-checked.
2. **Push Token Management**:
   - **Login**:
     - Verify the token is added to the `push_tokens` table in Supabase.
   - **Logout**:
- Verify the token is removed from the `push_tokens` table in Supabase.

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -42,6 +42,7 @@
     "picture": "Picture",
     "post": "Post",
     "profile": "Profile",
+    "pushNotifications": "Push Notifications",
     "report": "Report",
     "reportHint": "Please enter the information you wish to report.",
     "reportSubject": "Report {{subject}}",
@@ -63,9 +64,12 @@
   },
   "error": {
     "default": "Error occurred!",
-    "displayNameExists": "The nickname already exists",
-    "displayNameInvalid": "Nickname must be between 2 and 20 characters",
-    "displayNameIsEmpty": "Please enter a nickname",
+    "displayNameExists": "The display name already exists",
+    "displayNameInvalid": "Display name must be between 2 and 20 characters",
+    "displayNameIsEmpty": "Please enter a display name",
+    "failedToGetPushToken": "Failed to get push token for push notification!",
+    "mustUsePhysicalDeviceForSubject": "Must use physical device for {{subject}}",
+    "projectIdNotFound": "Project ID not found",
     "unableToOpenEmailClient": "Unable to open email client"
   },
   "loginInfo": {
@@ -140,7 +144,7 @@
   },
   "signIn": {
     "continueWithProvider": "Continue with {{provider}}",
-    "description": "A place where Korean developers and developers around the world communicate!",
+    "description": "A place where developers from around the world meet Korean developers!",
     "googleIdNotAvailable": "Google ID is not available",
     "playServiceNotAvailable": "Google Play Service is not available",
     "policyAgreement": "By signing in, you agree to our {{termsOfService}} and {{privacyPolicy}}.",
