--- a/assets/langs/ko.json
+++ b/assets/langs/ko.json
@@ -60,7 +60,9 @@
     "viewsWithCount": {
       "one": "조회수 %{count}",
       "other": "조회수 %{count}"
-    }
+    },
+    "bio": "바이오",
+    "score": "점수"
   },
   "error": {
     "default": "오류가 발생했습니다!",
@@ -70,7 +72,8 @@
     "failedToGetPushToken": "푸시 토큰을 가져오는 데 실패했습니다",
     "mustUsePhysicalDeviceForSubject": "{{subject}}을(를) 위해 실제 기기를 사용해야 합니다",
     "projectIdNotFound": "프로젝트 ID를 찾을 수 없습니다",
-    "unableToOpenEmailClient": "이메일 클라이언트를 열 수 없습니다"
+    "unableToOpenEmailClient": "이메일 클라이언트를 열 수 없습니다",
+    "failedToFetchData": "데이터를 가져오는 데 실패했습니다"
   },
   "loginInfo": {
     "cancel": "취소",
