--- a/assets/langs/ko.json
+++ b/assets/langs/ko.json
@@ -7,6 +7,7 @@
   "common": {
     "add": "추가",
     "appErrorMessage": "통신이 원활하지 않습니다.\n네트워크 상태를 확인해주세요.",
+    "bio": "바이오",
     "block": "차단",
     "blockUser": "{{user}} 차단",
     "blockUserDesc": "사용자를 차단하면 해당 사용자의 콘텐츠에 접근할 수 없습니다. 이 사용자를 차단하시겠습니까?",
@@ -33,6 +34,7 @@
     "invalidUrl": "유효하지 않은 URL",
     "latest": "최신순",
     "leaveComment": "댓글 남기기",
+    "newReplyOnTitle": "\"{{title}}\"에 새로운 댓글이 달렸습니다",
     "noComment": "댓글이 없습니다",
     "notFound": "찾을 수 없습니다",
     "notFoundData": "데이터를 찾을 수 없습니다",
@@ -49,6 +51,7 @@
     "reportSuccess": "신고해주셔서 감사합니다.",
     "requiredField": "This field is required",
     "retry": "재시도",
+    "score": "점수",
     "selectFromGallery": "갤러리에서 선택",
     "takeAPhoto": "사진 찍기",
     "unblock": "차단 해제",
@@ -60,20 +63,18 @@
     "viewsWithCount": {
       "one": "조회수 %{count}",
       "other": "조회수 %{count}"
-    },
-    "bio": "바이오",
-    "score": "점수"
+    }
   },
   "error": {
     "default": "오류가 발생했습니다!",
     "displayNameExists": "이미 존재하는 닉네임입니다",
     "displayNameInvalid": "닉네임은 2자 이상 20자 이하여야 합니다",
     "displayNameIsEmpty": "닉네임을 입력해주세요",
+    "failedToFetchData": "데이터를 가져오는 데 실패했습니다",
     "failedToGetPushToken": "푸시 토큰을 가져오는 데 실패했습니다",
     "mustUsePhysicalDeviceForSubject": "{{subject}}을(를) 위해 실제 기기를 사용해야 합니다",
     "projectIdNotFound": "프로젝트 ID를 찾을 수 없습니다",
-    "unableToOpenEmailClient": "이메일 클라이언트를 열 수 없습니다",
-    "failedToFetchData": "데이터를 가져오는 데 실패했습니다"
+    "unableToOpenEmailClient": "이메일 클라이언트를 열 수 없습니다"
   },
   "loginInfo": {
     "cancel": "취소",
