feat(wip): sponsors page

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -75,6 +75,7 @@
     "failedToFetchData": "Failed to fetch data",
     "failedToGetPushToken": "Failed to get push token for push notification!",
     "mustUsePhysicalDeviceForSubject": "Must use physical device for {{subject}}",
+    "notSupportedInWeb": "This feature is not supported in web",
     "projectIdNotFound": "Project ID not found",
     "unableToOpenEmailClient": "Unable to open email client"
   },
@@ -144,6 +145,7 @@
     "darkMode": "Dark Mode",
     "loginInfo": "Login Information",
     "notificationSettings": "Notification Settings",
+    "sponsors": "Sponsors",
     "termsOfService": "Terms of Service",
     "title": "Settings",
     "updateProfile": "Update Profile"
