--- a/assets/langs/ko.json
+++ b/assets/langs/ko.json
@@ -75,6 +75,7 @@
     "failedToFetchData": "데이터를 가져오는 데 실패했습니다",
     "failedToGetPushToken": "푸시 토큰을 가져오는 데 실패했습니다",
     "mustUsePhysicalDeviceForSubject": "{{subject}}을(를) 위해 실제 기기를 사용해야 합니다",
+    "notSupportedInWeb": "웹에서는 지원하지 않는 기능입니다.",
     "projectIdNotFound": "프로젝트 ID를 찾을 수 없습니다",
     "unableToOpenEmailClient": "이메일 클라이언트를 열 수 없습니다"
   },
@@ -144,6 +145,7 @@
     "darkMode": "다크 모드",
     "loginInfo": "로그인 정보",
     "notificationSettings": "알림 설정",
+    "sponsors": "후원사",
     "termsOfService": "서비스 약관",
     "title": "설정",
     "updateProfile": "프로필 수정"
