--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -55,6 +55,7 @@
     "retry": "Retry",
     "score": "Score",
     "selectFromGallery": "Select from gallery",
+    "sponsors": "Sponsors",
     "takeAPhoto": "Take a photo",
     "unblock": "Unblock",
     "unhandledError": "An unhandled error occurred.",
@@ -116,6 +117,10 @@
     "yourTags": "Your Tags",
     "yourTagsPlaceholder": "Please enter tags related to you"
   },
+  "points": {
+    "title": "Points",
+    "myPoints": "My Points"
+  },
   "post": {
     "update": {
       "updateFailed": "Update failed!",
@@ -145,7 +150,7 @@
     "darkMode": "Dark Mode",
     "loginInfo": "Login Information",
     "notificationSettings": "Notification Settings",
-    "sponsors": "Sponsors",
+    "points": "Points",
     "termsOfService": "Terms of Service",
     "title": "Settings",
     "updateProfile": "Update Profile"
