refactor: differentiate route with layouts

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -31,6 +31,7 @@
       "one": "Following",
       "other": "Followings"
     },
+    "home": "Home",
     "image": "Image",
     "invalidUrl": "Invalid URL",
     "latest": "Latest",
