--- a/assets/langs/ko.json
+++ b/assets/langs/ko.json
@@ -31,6 +31,7 @@
       "one": "팔로잉",
       "other": "팔로잉"
     },
+    "home": "홈",
     "image": "이미지",
     "invalidUrl": "유효하지 않은 URL",
     "latest": "최신순",
