refactor: migrate authentication using Clerk (#15)
https://clerk.com/docs/custom-flows/oauth-connections

Currently support `Github`, `Google`, and `Apple`.

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -81,12 +81,12 @@
   },
   "loginInfo": {
     "cancel": "Cancel",
-    "cancelAccount": "Cancel Account",
-    "cancelAccountDescription": "Are you sure you want to cancel your account? This action cannot be undone.",
     "loggedInWith": "Logged in with {{provider}}",
     "loginMethod": "Login Method",
     "logout": "Logout",
-    "title": "Login Information"
+    "title": "Login Information",
+    "withdrawAccount": "Cancel Account",
+    "withdrawAccountDescription": "Are you sure you want to cancel your account? This action cannot be undone."
   },
   "onboarding": {
     "affiliation": "Affiliation",
