fix: auth routes

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -46,6 +46,7 @@
     "permissionGrantCamera": "Please grant camera permission to take pictures.",
     "picture": "Picture",
     "post": "Post",
+    "privacyPolicy": "Privacy and Policy",
     "profile": "Profile",
     "pushNotifications": "Push Notifications",
     "report": "Report",
@@ -57,6 +58,7 @@
     "score": "Score",
     "selectFromGallery": "Select from gallery",
     "takeAPhoto": "Take a photo",
+    "termsOfService": "Terms of Service",
     "unblock": "Unblock",
     "unhandledError": "An unhandled error occurred.",
     "unknown": "Unknown",
