--- a/assets/langs/ko.json
+++ b/assets/langs/ko.json
@@ -46,6 +46,7 @@
     "permissionGrantCamera": "촬영을 위해 카메라 권한을 부여해주세요.",
     "picture": "사진",
     "post": "게시판",
+    "privacyPolicy": "개인정보 처리방침",
     "profile": "프로필",
     "pushNotifications": "푸시 알림",
     "report": "신고",
@@ -57,6 +58,7 @@
     "score": "점수",
     "selectFromGallery": "갤러리에서 선택",
     "takeAPhoto": "사진 찍기",
+    "termsOfService": "서비스 약관",
     "unblock": "차단 해제",
     "unhandledError": "처리되지 않은 오류가 발생했습니다.",
     "unknown": "알 수 없음",
