--- a/assets/langs/ko.json
+++ b/assets/langs/ko.json
@@ -62,7 +62,7 @@
     "unblock": "차단 해제",
     "unhandledError": "처리되지 않은 오류가 발생했습니다.",
     "unknown": "알 수 없음",
-    "update": "업데이트",
+    "update": "수정",
     "updateApp": "앱 업데이트",
     "user": "사용자",
     "viewsWithCount": {
